Added bootstarp, Nav bar and Carsouel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<h1>Our MongoDB is Working!</h1>
-
-<ul>
-  <li *ngFor="let user of users">
-    <h3 class="btn btn-primary">{{ user.firstName }} {{ user.lastName }}</h3>
-  </li>
-</ul>
+<app-navbar></app-navbar>
+<div class="container">
+  <app-carousel></app-carousel>
+</div>
 
