--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <app-carousel></app-carousel>
+
+<div class="container" style="margin-top: 80px;">
+    <router-outlet></router-outlet>
 </div>
 
