--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,6 +1,5 @@
-NextCopy
-<div id="carouselExampleIndicators" class="carousel slide "
-data-interval="1500" data-ride="carousel" style="margin-top: 60px;">
+
+<div id="carouselExampleIndicators" class="carousel slide" data-interval="2500" data-ride="carousel" >
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -9,27 +8,45 @@ data-interval="1500" data-ride="carousel" style="margin-top: 60px;">
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="http://via.placeholder.com/350x150" alt="First slide">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0000.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://via.placeholder.com/350x150" alt="Second slide">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0003.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://unsplash.it/200/300/?random" alt="Third slide">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0006.jpg" alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://via.placeholder.com/350x150" alt="Fourth slide">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0007.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://unsplash.it/200/300/?random" alt="Fisth slide">
-    </div>
-
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://unsplash.it/200/300/?random" alt=" slide">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0009.jpg" alt="Fourth slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://unsplash.it/200/300/?random" alt="Second slide s">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0012.jpg" alt="Fourth slide">
     </div>
-
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0015.jpg" alt="Fourth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0019.jpg" alt="Fourth slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/gallary_images/IMG-20170906-WA0021.jpg" alt="Fourth slide">
+    </div>
   </div>
 </div>
+
+<section class="col-sm-12">
+  <h3>Welcome to AICE</h3>
+  <p>
+    <strong>Arora Institute of Computer Education (AICE)</strong> is a one of the ISO 9001:2008 Organization, registered by N.C.T. Approved by Ministry of HRD(Under Govt. of India).  Certificate Regd.
+    AICE provides various training programs to the people of different categories like competitive and computer education in the Society.
+    
+    We fulfill the dream of Govt. of Haryana. &amp; Govt. of India, to “Information Technology for everyone”. Today, the excitement of being computer literate may be seen in the students as well as other peoples also.  
+    
+    Arora Institue of Computer Education (AICE) has been done at various cities and towns.  It is running successfully in many districts of Haryana.
+    Our main aim is to provide a minimal charge of the computer and competitive education to the poor people.
+  </p>
+</section>
+
