--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~https://fonts.googleapis.com/icon?family=Material+Icons';
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body{
+  /* background-color: #333; */
+  /* color: #fff; */
+}
+
+
