--- a/src/app/studentregistration/studentregistration.component.html
+++ b/src/app/studentregistration/studentregistration.component.html
@@ -7,17 +7,17 @@
 <form class="">
     <div class="form-group1">
       <md-form-field >
-        <input mdInput placeholder="First Name">
+        <input mdInput placeholder="First Name" [value]="firstName">
       </md-form-field>
     </div>
     <div class="form-group1">
       <md-form-field >
-        <input mdInput placeholder="Last Name">
+        <input mdInput placeholder="Last Name" [value]="lastName">
       </md-form-field>
     </div>
 
     <div class="form-group">
-        <md-select placeholder="Gender" [(ngModel)]="selectedValue">
+        <md-select placeholder="Gender" [(ngModel)]="selectedValue" name="gender">
             <md-option value="Male"> Male </md-option>
             <md-option value="Female"> Female </md-option>
           </md-select>
@@ -33,7 +33,7 @@
 
       <div class="form-group1">
         <md-form-field >
-            <input mdInput placeholder="Email" [formControl]="emailFormControl">
+            <input mdInput placeholder="Email" [formControl]="emailFormControl" [value]="email">
             <md-error *ngIf="emailFormControl.hasError('pattern')">
               Please enter a valid email address
             </md-error>
@@ -41,7 +41,21 @@
               Email is <strong>required</strong>
             </md-error>
         </md-form-field>
+
+        <label class="custom-file" style="width:100%">
+          <input type="file" id="selectFile" class="custom-file-input" (change)="uploadImage($event)"  >
+          <span class="custom-file-control"></span>
+        </label>
+
+        <div class="form-group">
+          <input type="file" value="Choose photo.." (change)="uploadImage($event)">
+        </div>
+
+      <button md-raised-button color="primary" (click)='registerStudent()'>Submit</button>
+      <button md-raised-button color="default" (click)='registerStudent()'>Reset</button>
     </div>
+
+
 </form>
 </div>
 </div>
