--- a/src/app/studentregistration/studentregistration.component.html
+++ b/src/app/studentregistration/studentregistration.component.html
@@ -45,6 +45,9 @@
               <div class="form-group">
                 <input type="file" value="Choose photo.." (change)="uploadImage($event)">
               </div>
+              <div class="form-group">
+                <input type="file" value="upload aadhar" (change)="uploadAadhar($event)">
+              </div>
               <div class="button-row">
                   <button md-raised-button color="primary" type="submit">Submit</button>
               </div>
