--- a/src/app/studentregistration/studentregistration.component.html
+++ b/src/app/studentregistration/studentregistration.component.html
@@ -42,14 +42,50 @@
                     <input mdInput placeholder="address" [(ngModel)]="registerData.address" name="address">
                   </md-form-field>
               </div>
-              <div class="form-group">
+            
+<!--   <div class="form-group">
                 <input type="file" value="Choose photo.." (change)="uploadImage($event)">
               </div>
-              <div class="form-group">
+               ===============================                       -->
+              <div class="form-group" style=" position: relative;">
+				<input type="file"    (change)="uploadImage($event)"  class="file" style="    position: relative;
+    width: 748px;
+    height: 34px;
+    text-align: right;
+    -moz-opacity: 0;
+    filter: alpha(opacity: 0);
+    opacity: 0;
+    z-index: 2;
+    /* margin-top: -21px; */
+    /* margin-left: 17px; */" />
+				  <div style="position: absolute;
+    top: 0px;
+    left: 3px;
+    z-index: 1;">
+					<md-form-field style=" margin-top: -30px;">
+                    <input mdInput [(ngModel)]="imageName" name ="photoUpload" value="Choose photo.." style="     position: relative;
+    height: 34px;
+    width: 426px;
+    font-weight: normal;
+    border-radius: 2px;
+    /* background-color: whitesmoke; */
+    /* border: 1px solid #eceaea; */
+    margin-left: -2px;">
+                    <img src="assets/browseButton.png" />
+                    </md-form-field>
+					
+				  </div>
+			  </div>
+<!--                ===============================                       -->
+
+
+
+               <div class="form-group">
                 <input type="file" value="upload aadhar" (change)="uploadAadhar($event)">
-              </div>
+              </div> 
               <div class="button-row">
-                  <button md-raised-button color="primary" type="submit">Submit</button>
+                  <button md-raised-button color="primary" type="submit">Submit</button>      
+                     
               </div>
         </form>
     </div>
